--- a/Client/src/pages/Home/home.module.css
+++ b/Client/src/pages/Home/home.module.css
@@ -5,16 +5,22 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  background-color: green;
+  background-color: rgb(0, 128, 0);
   font-family: "Bebas Neue", sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .containOption {
   width: 50%;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   flex-direction: column;
   align-items: center;
+  margin-top: 3rem;
 }
 
 .containOption h1 {
@@ -31,6 +37,7 @@
   align-items: center;
   font-size: 2rem;
   width: 100%;
+  z-index: 1;
 }
 
 .link {
@@ -40,8 +47,37 @@
   width: fit-content;
 }
 
+.jocker {
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem;
+}
+.jocker img {
+  opacity: 0.8;
+}
+
+.Poker {
+  position: absolute;
+  bottom: 0;
+  right: 15px;
+}
+/* border-radius: 50%; */
+
+.Berenjena {
+  position: absolute;
+  bottom: 0;
+  left: 0px;
+}
+.Berenjena img,
+.Poker img {
+  width: 400px;
+}
+
 @media only screen and (max-width: 730px) {
-    .containOption {
-        width: 100%;
-    }
+  .containOption {
+    width: 100%;
+  }
 }
