--- a/Client/src/components/berenjena/informationGame/dataPlayer/dataPlayer.module.css
+++ b/Client/src/components/berenjena/informationGame/dataPlayer/dataPlayer.module.css
@@ -8,7 +8,7 @@
   z-index: 1;
   text-align: center;
   border-radius: 10%;
-  padding: 1rem;
+  padding-inline: 1rem;
   color: orange;
   border: 2px red solid;
   /* border: 2px greenyellow solid; */
