--- a/Client/src/components/berenjena/informationGame/Results/result.module.css
+++ b/Client/src/components/berenjena/informationGame/Results/result.module.css
@@ -1,92 +1,35 @@
 
-/* ---------------resultado-------------------------- */
-.resultContain {
-    top: 10%;
-    right: 0%;
-    width: auto;
-    position: absolute;
-    background-color: orange;
-    overflow-y: scroll;
-    border-radius: 10px;
-    z-index: 1;
-  }
-  .titles {
-    display: flex;
-    justify-content: center;
-  }
-  .titles p {
-    padding-inline: 2%;
-  }
-  .datos {
-    display: flex;
-  }
-  
-  .infoResult {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    padding-inline: 5%;
-    border-inline: 1px solid black;
-  }
-  
-  .circuloTrue {
-    display: flex;
-    position: relative;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-  
-    overflow: hidden;
-    padding: 5%;
-    margin-inline-start: 25%;
-  }
-  
-  .circuloTrue > p {
-    font-family: sans-serif;
-    color: rgb(255, 255, 255);
-    font-size: 1rem;
-  }
-  
-  .circlecontainer {
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .circle {
-    display: flex;
-    position: relative;
-    width: 1rem;
-    height: 1rem;
-    border-radius: 50%;
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-  
-    overflow: hidden;
-    padding: 5%;
-    margin-inline-start: 25%;
-  }
-  
-  .circle::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    height: 2px;
-    background-color: rgb(0, 0, 0);
-    transform: rotate(-45deg);
-  }
-  .circle > p {
-    font-family: sans-serif;
-    color: rgb(255, 255, 255);
-    font-size: 1rem;
-  }
-  
+.tableContainer {
+  margin-top: 20px;
+  padding-inline: 0.5rem;
+}
+
+.table {
+  border-radius: 10px;
+  width: 100%;
+  border-collapse: collapse;
+  font-family: "noto sans";
+}
+
+.table th,
+.table td {
+  border: 1px solid #ddd;
+  padding: 5px;
+}
+
+.table th {
+  background-color: #b69b84;
+  color: white;
+}
+
+.table tr:hover {
+  background-color: #9ec5ca67;
+}
+
+.titleCodeTable {
+  min-width: 150px;
+}
+
+.titleTable {
+  min-width: 200px;
+}
