--- a/Client/src/components/berenjena/informationGame/dataPlayer/dataPlayer.module.css
+++ b/Client/src/components/berenjena/informationGame/dataPlayer/dataPlayer.module.css
@@ -3,27 +3,42 @@
   height: auto;
   position: absolute;
   bottom: 2.5%;
-  background-color: rgba(0, 0, 0, 0.301);
+  /* background-color: red; */
   left: 2%;
   z-index: 1;
   text-align: center;
   border-radius: 10%;
   padding-inline: 1rem;
   color: orange;
-  border: 2px red solid;
-  /* border: 2px greenyellow solid; */
+  display: flex;
+  /* align-items: center; */
+  gap: 2rem;
 }
 
-.avatar svg {
-  width: 150px;
+.avatar img {
+  width: 125px;
   height: auto;
+  border-radius: 50%;
+  margin: 0;
 }
 
-.apuesta {
-  margin: 0;
+.avatar {
+  display: flex;
+  flex-direction: column;
   font-size: 1.2rem;
 }
-.name {
-  margin: 0;
-  font-size: 2rem;
+
+
+.table {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  /* border-collapse: collapse; */
+  font-family: "noto sans";
+  font-size: 1.2rem;
+}
+
+.table td {
+  border: 1px solid #ddd;
+  padding: 5px;
 }
