--- a/Client/src/components/berenjena/jugadores/jugadores.module.css
+++ b/Client/src/components/berenjena/jugadores/jugadores.module.css
@@ -2,12 +2,18 @@
   background-color: maroon;
   border-radius: 10px;
   color: white;
-  width: 120px;
   margin: 1rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
+
+.avatar{}
+.cards img{
+  width: 50px;
+  height: 50px;
+
+}
+
 
 /* CARD 1 */
 .AcomodarCard1 {
