--- a/Client/src/components/berenjena/apuesta/apuesta.module.css
+++ b/Client/src/components/berenjena/apuesta/apuesta.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   position: absolute;
   left: 40%;
-  background-color: orange;
+  background-color: #ff904f;
   width: 20%;
   height: 10%;
   padding-top: 2%;
@@ -13,6 +13,8 @@
   border-radius: 10px;
   align-items: center;
   z-index: 1;
+  color: white;
+  font-size: 1.5rem;
 }
 
 .contain p{
