--- a/Client/src/components/berenjena/informationGame/Results/result.module.css
+++ b/Client/src/components/berenjena/informationGame/Results/result.module.css
@@ -1,35 +1,53 @@
-.tableWrapper {
-  max-width: 400px;
-  background-color: red;
-}
-.table {
-  width: 400px;
-  border-radius: 10px;
-  /* border-collapse: collapse; */
-  font-family: "noto sans";
-}
-
-.table th,
-.table td {
-  border: 1px solid #ddd;
-  padding: 5px;
- 
-}
-.table td {
+.ContainResult {
+  position: absolute;
   width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(10px);
+  z-index: 1;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: start;
+  justify-content: center;
+}
+.table_component {
+  padding-top: 5rem;
+  overflow: auto;
+  font-size: 1.3rem;
 }
 
-.table th {
-  background-color: #b69b84;
-  color: white;
+.table_component table {
+  border: 2px solid #dededf;
+  height: 100%;
+  width: auto;
+  table-layout: fixed;
+  border-collapse: collapse;
+  border-spacing: 1px;
+  text-align: center;
 }
 
-.table tr:hover {
-  background-color: #9ec5ca67;
-}
-.table tr {
+.table_component caption {
+  caption-side: top;
+  text-align: left;
 }
 
-.titleTable {
-  max-width: 50px;
+.table_component th {
+  border: 2px solid #dededf;
+  background-color: #ff904f;
+  color: #ffffff;
+  padding: 8px;
+}
+
+.table_component td {
+  border: 2px solid #dededf;
+  color: #000000;
+  padding: 1.2rem;
+}
+
+.closeResult {
+  display: flex;
+  justify-content: end;
+  margin-top: 2rem;
+  cursor: pointer;
 }
