--- a/Client/src/components/berenjena/writeName/writeName.module.css
+++ b/Client/src/components/berenjena/writeName/writeName.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   position: absolute;
   left: 40%;
-  background-color: orange;
+  background-color: #ff904f;
   width: 20%;
   height: 20%;
   padding: 2%;
