--- a/Client/src/pages/Home/home.module.css
+++ b/Client/src/pages/Home/home.module.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("../../assets/bgHome.png");
+  background-image: url("../../assets/homeFirst/bgHome.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
