--- a/Client/src/pages/PokerGame/pokerMenu/pokerMenu.module.css
+++ b/Client/src/pages/PokerGame/pokerMenu/pokerMenu.module.css
@@ -33,12 +33,12 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem;
-  padding-inline: 1rem;
 }
 
 .welcomeImg {
-  height: 15rem;
-  max-height: 70%;
+  width: 100%;
+  height: auto;
+  max-height: 70vh; /* Limitar la altura máxima */
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.849);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
