--- a/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
+++ b/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
@@ -1,112 +1,223 @@
 .containRoom {
+  display: flex;
+  flex-direction: column;
+  font-family: "Bebas Neue", sans-serif;
   padding: 0;
   margin: 0;
-  display: flex;
-  font-family: "Bebas Neue", sans-serif;
-  background-image: url("../../../../src/assets/fondoo.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  min-height: 100vh;
+  background-color: aliceblue;
 }
+
 .sideBar {
-  height: 100vh;
-  width: 20%;
-  background-color: #ff904f;
-  padding-inline: 1rem;
+  background-color: #ff914d;
+  color: white;
+  padding: 1rem;
   font-size: 1.3rem;
   display: flex;
   flex-direction: column;
-  color: white;
+  width: 100%;
 }
+
+@media (min-width: 768px) {
+  .sideBar {
+    width: 30%;
+    height: 100vh;
+  }
+}
+
 .DivButtonBack {
   margin-top: 1rem;
 }
-.DivButtonBack button {
+
+.DivButtonBack a {
+  display: inline-block;
   width: 100%;
   height: 2rem;
   border-radius: 10px;
+  text-align: center;
+  line-height: 2rem;
+  color: #fff;
+  text-decoration: none;
+  background-color: #007bff;
+  transition: background-color 0.3s;
   cursor: pointer;
+}
+
+.DivButtonBack a:hover {
+  background-color: #0056b3;
 }
 
 .DivName {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   width: 100%;
   margin-top: 4rem;
 }
+
 .DivName input {
   height: 2rem;
   border-radius: 10px;
-  width: 95%;
+  width: 100%;
   padding-left: 0.5rem;
 }
+
 .DivAvatars {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin-top: 2rem;
 }
+
 .DivAvatarsGrid {
   display: grid;
-  gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+  width: 100%;
 }
+
 .DivAvatars img {
-  width: 80px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  transition: transform 0.3s;
+}
+
+.DivAvatars img:hover {
+  transform: scale(1.1);
 }
 
 .DivInputRoom {
   display: flex;
   flex-direction: column;
-  align-items: start;
-  width: 100%;
+  align-items: flex-start;
+  width: 10rem;
   margin-top: 4rem;
   font-size: 1.3rem;
 }
+
 .DivInputRoom input {
   height: 2rem;
   border-radius: 10px;
-  width: 95%;
+  width: 100%;
   padding-left: 0.5rem;
 }
 
 .DivInputRoom button {
-  width: 100px;
+  width: 100%;
+  max-width: 150px;
   border-radius: 5px;
-  align-self: end;
   margin-top: 0.5rem;
-  margin-right: 0.5rem;
   cursor: pointer;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  padding: 0.5rem;
+  transition: background-color 0.3s;
+}
+
+.DivInputRoom button:hover {
+  background-color: #218838;
 }
 
 .DivRooms {
   display: flex;
-  flex-wrap: wrap;
-  margin: 2rem;
-  gap: 2rem;
-  height: 200px;
-  width: 80%;
+  flex-direction: column;
   justify-content: center;
+  width: 100%;
+  padding: 2rem;
+  gap: 2rem;
+}
+
+.roomsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .roomsContainer {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+.logoBerenjena{
+  width: 20rem;
+  height: 100%;
+}
+
+.autocomplete {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff914d;
+  border: 3px solid black;
+  border-radius: 10px;
+  padding: 1rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
 .DivRoom {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 1.3rem;
-  color: white;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  padding: 1rem;
+  border-radius: 10px;
+  width: 10rem;
+  height: 11rem;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.textRoom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  gap: 2rem;
+}
+
 .DivRoom p {
-  font-size: 1.3rem;
   margin: 0;
 }
 
 .DivRoom img {
-  width: 150px;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
-  border: 3px solid white;
+  margin: 1rem 0;
 }
+
 .DivRoom button {
-  width: 100%;
-  border-radius: 10px;
-  border: 5px solid green;
+  width: 80%;
+  border-radius: 5px;
+  border: none;
   cursor: pointer;
+  background-color: green;
+  color: white;
+  padding: 0.5rem;
+  transition: background-color 0.3s;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.DivRoom button:hover {
+  background-color: rgb(0, 32, 100);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+}
+
+@media (min-width: 768px) {
+  .containRoom {
+    flex-direction: row;
+  }
+
+  .DivRooms {
+    flex-grow: 1;
+  }
 }
