--- a/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
+++ b/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
@@ -83,6 +83,10 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
+.swal2-container{
+  font-family: "Bebas Neue";
+}
+
 .profile {
   display: flex;
   flex-direction: column;
