--- a/Client/src/components/berenjena/autocomplete/autocomplete.module.css
+++ b/Client/src/components/berenjena/autocomplete/autocomplete.module.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 1rem;
 }
 
 .formControl {
@@ -20,6 +19,9 @@
 
 @media (max-width: 600px) {
   .container {
-    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+
   }
 }
