--- a/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
+++ b/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
@@ -421,7 +421,7 @@
     justify-content: start;
     width: auto;
     padding: 1.5rem;
-    gap: 2rem;
+    gap: 1.5rem;
   }
 
   .DivInputRoom {
@@ -491,6 +491,7 @@
 .DivRoom {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   font-size: 1.3rem;
   color: rgb(0, 0, 0);
@@ -503,6 +504,8 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+
+
 .textRoom {
   display: flex;
   flex-direction: row;
@@ -513,6 +516,8 @@
   font-family: "Reddit Sans";
   font-size: 1rem;
 }
+
+
 
 .groupIcon {
   display: flex;
@@ -528,7 +533,7 @@
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
-  margin: 1rem 0;
+  margin-inline: 1rem;
 }
 
 .DivRoom button {
@@ -547,4 +552,38 @@
 .DivRoom button:hover {
   background-color: rgb(0, 32, 100);
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+
+@media (max-width: 455px) {
+  .DivRoom {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    width: 90%;
+    height: 3rem;
+  }
+
+  .roomsContainer {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+  .textRoom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    width: auto;
+    gap: 2rem;
+    font-family: "Reddit Sans";
+    font-size: 1rem;
+  }
+
+  .DivRoom img {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-inline: 1rem;
+  }
 }
