--- a/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
+++ b/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
@@ -408,9 +408,9 @@
 .roomsContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-direction: row;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 @media (max-width: 815px) {
