--- a/Client/src/components/berenjena/cards/card.module.css
+++ b/Client/src/components/berenjena/cards/card.module.css
@@ -1,5 +1,4 @@
-/* CARD 1 */
-.spanishDeck1 {
+.spanishDeck {
   height: 120px;
   width: 70px;
   background-color: #f5f5f5;
@@ -7,61 +6,8 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
 }
-.valueContain1 {
+.valueContain {
   display: flex;
   flex-direction: column;
   padding-inline: 10%;
-}
-/* CARD 1 */
-
-/* CARD 2 */
-.spanishDeck2 {
-  width: 120px;
-  height: 70px;
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  transition: 0.3s;
-  display: flex;
-}
-.valueContain2 {
-  display: flex;
-  padding-inline: 10%;
-  justify-content: space-between;
-  width: 100%;
-}
-/* CARD 2 */
-
-/* CARD 3 */
-.spanishDeck3 {
-  height: 120px;
-  width: 70px;
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  transition: 0.3s;
-}
-.valueContain3 {
-  display: flex;
-  flex-direction: column;
-  padding-inline: 10%;
-}
-/* CARD 3 */
-
-/* CARD 4 */
-.spanishDeck4 {
-  width: 120px;
-  height: 70px;
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  transition: 0.3s;
-  display: flex;
-  margin-block: 10px;
-}
-.valueContain4 {
-  display: flex;
-  padding-inline: 10%;
-  justify-content: space-between;
-  width: 100%;
 }
