--- a/Client/src/components/berenjena/loader/loader.module.css
+++ b/Client/src/components/berenjena/loader/loader.module.css
@@ -318,6 +318,7 @@
   margin-top: 3rem;
   border: none;
   cursor: pointer;
+  font-size: 1.5rem;
   font-family: "Bebas Neue";
   text-decoration: none;
   background-color: green;
