--- a/Client/src/components/berenjena/apuesta/apuesta.module.css
+++ b/Client/src/components/berenjena/apuesta/apuesta.module.css
@@ -1,43 +1,112 @@
-.contain {
+.container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  left: 40%;
-  background-color: #ff904f;
-  width: 20%;
-  height: 10%;
-  padding-top: 2%;
-  padding-bottom: 2%;
-  top: 40%;
+  height: auto;
+  top: 30%;
   border-radius: 10px;
   align-items: center;
   z-index: 1;
   color: white;
-  font-size: 1.5rem;
 }
 
-.contain p{
-  margin:0
-}
-.contain button {
-  width: 60%;
-  height: 30%;
-  color: black;
-  border: solid black 3px;
-  border-radius: 5px;
+.betContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ff904f00;
+  backdrop-filter: blur(2px);
+  padding: 20px;
+  border-radius: 50%;
+  border: 5px solid transparent;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #000;
+  font-size: 1rem;
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  position: relative;
 }
 
-.contain button:hover {
-    cursor: pointer;
-    width: 59%;
-  height: 28%;
+.betContainer::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  border-radius: 50%;
+  border: 20px solid green;
+  animation: loader-color 30s linear infinite, loader-fill 30s linear infinite;
+  transform: rotate(45deg);
 }
-.contain select {
-  width: 60%;
-  height: 30%;
-  color: black;
-  border: solid black 3px;
-  border-radius: 5px;
-  margin-bottom: 5%;
+
+.betContainer p {
+  margin: 5px 0;
+}
+
+.pTime{
+  font-style: italic !important;
+}
+
+.betContainer button {
+  display: inline-block;
+  padding: 10px 20px;
+  border: none;
+  background-color: #000000;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.betContainer button:hover {
+  background-color: #ff904f;
+  cursor: pointer;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.betContainer button:active {
+  background-color: #ff904f;
+  transform: translateY(0);
+}
+
+@keyframes loader-color {
+  0% {
+    border-color: #008000; /* Dark Green */
+  }
+  25% {
+    border-color: #32cd32; /* Lime Green */
+  }
+  50% {
+    border-color: #ff4500; /* Orange Red */
+  }
+  75% {
+    border-color: #dc143c; /* Crimson */
+  }
+  100% {
+    border-color: #ff0000; /* Red */
+  }
+}
+
+@keyframes loader-fill {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+  }
+  25% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
+  75% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
+  }
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
+  }
 }
